# tennis_analyzer

./: .gitignore  .tunnel.config.example  APP_ARCHITECTURE.md  ARCHITECTURE.md  BASELINE_APP.md  CLAUDE.md  MORNING_HANDOFF_2026-04-25.md  PWA_QUICKSTART.md  README.md  The Fault Tolerant Forehand_中文精译整理版.html  The Fault Tolerant Forehand_中文精译整理版.md  main.py  pyproject.toml  requirements.txt  start-public.sh  start.sh  vcore98_string_selection_export.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v3_vision.md
analysis/: __init__.py  kinematic_calculator.py  trajectory.py
app/: __init__.py  jobs.py  main.py  routes.py  services.py  storage.py
config/: __init__.py  backhand_config.py  framework_config.py  keypoints.py  mcporter.json  vlm_config.json
core/: __init__.py  pose_estimator.py  video_processor.py
evaluation/: __init__.py  backhand_evaluator.py  backhand_kpi.py  diagnosis_engine.py  event_detector.py  forehand_evaluator.py  hallucination_mitigation.py  kpi.py  stroke_classifier.py  vlm_analyzer.py
knowledge/: __init__.py  anatomical_extractor.py  graph.py  graph_assembler.py  graph_validator.py  registry.py  schemas.py  user_profile.py
report/: __init__.py  report_generator.py  visualizer.py
scripts/: analyze_ftt_batch1.py  analyze_ftt_batch2.py  analyze_ftt_batch3.py  analyze_script.py  analyze_transcripts.py  batch_feeltennis.py  big3_analyzer.py  big3_video_player.py  compare_split_screen.py  extract_all_videos.py  extract_existing_ftt_videos.py  extract_key_frames.py  extract_video_info.py  fetch_all_transcripts.py  (+11 more)
(+518 files in other folders)
